[feat] ch03 code review